cot-macros/tests/ui/derive_into_response_missing_trait_impl.rs
use cot::response::IntoResponse;

#[derive(IntoResponse)]
enum MyResponse {
    A(Dummy),
}

struct Dummy;

fn main() {}
